fixed overlapping js with content

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
   /* This centers our sketch vertically. */
   align-items: center;
+  z-index: 1;
 }
 
 canvas {
@@ -54,12 +55,14 @@ ul {
  	-moz-animation:    ARROW 5s infinite;
   	-o-animation:      ARROW 5s infinite;
   	animation:         ARROW 5s infinite;
+    z-index: 4;
 }
 
 .content {
 	width:100%;
 	background-color: #1D48FF;
 	color: white;
+  z-index: 20;
 }
 
 .content-container {
@@ -116,5 +119,3 @@ p {
   50% { bottom:5vh; color: #FF0090; }
 }
 
-
-*/
